; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/oprofile/extr_op_model_fsl_emb.c_ctr_read.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/oprofile/extr_op_model_fsl_emb.c_ctr_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PMRN_PMC0 = common dso_local global i32 0, align 4
@PMRN_PMC1 = common dso_local global i32 0, align 4
@PMRN_PMC2 = common dso_local global i32 0, align 4
@PMRN_PMC3 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @ctr_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ctr_read(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %17 [
    i32 0, label %5
    i32 1, label %8
    i32 2, label %11
    i32 3, label %14
  ]

5:                                                ; preds = %1
  %6 = load i32, i32* @PMRN_PMC0, align 4
  %7 = call i32 @mfpmr(i32 %6)
  store i32 %7, i32* %2, align 4
  br label %18

8:                                                ; preds = %1
  %9 = load i32, i32* @PMRN_PMC1, align 4
  %10 = call i32 @mfpmr(i32 %9)
  store i32 %10, i32* %2, align 4
  br label %18

11:                                               ; preds = %1
  %12 = load i32, i32* @PMRN_PMC2, align 4
  %13 = call i32 @mfpmr(i32 %12)
  store i32 %13, i32* %2, align 4
  br label %18

14:                                               ; preds = %1
  %15 = load i32, i32* @PMRN_PMC3, align 4
  %16 = call i32 @mfpmr(i32 %15)
  store i32 %16, i32* %2, align 4
  br label %18

17:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %18

18:                                               ; preds = %17, %14, %11, %8, %5
  %19 = load i32, i32* %2, align 4
  ret i32 %19
}

declare dso_local i32 @mfpmr(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
